--- a/pkg/aspi/DESCRIPTION
+++ b/pkg/aspi/DESCRIPTION
@@ -6,6 +6,7 @@ Date: 2016-09-18
 Author: Matt Wayland
 Maintainer: Matt Wayland <mw283@cam.ac.uk>
 Description: Tools for the analysis and visualization of bilateral asymmetry in parasitic infections.
+Depends: R (>= 2.10)
 License: GPL-3
 LazyData: TRUE
 Suggests:
@@ -13,5 +14,4 @@ Suggests:
     rmarkdown,
     testthat
 VignetteBuilder: knitr
-Built: R 3.3.1; ; 2016-09-13 16:28:02 UTC; unix
 RoxygenNote: 5.0.1
