--- a/pkg/aspi/NAMESPACE
+++ b/pkg/aspi/NAMESPACE
@@ -4,3 +4,9 @@ export(eb.test)
 export(g.test)
 export(plotHistogram)
 export(plotVolcano)
+importFrom(graphics,abline)
+importFrom(graphics,hist)
+importFrom(graphics,plot)
+importFrom(stats,binom.test)
+importFrom(stats,p.adjust)
+importFrom(stats,pchisq)
